# training-monorepo

./: Makefile  README.md  grpo_main.py  main.py  pyproject.toml
data/: dataset.py
inference/: decoding.py
models/: attention.py  bpe_tokenizer.py  embeddings.py  feedforward.py  transformer.py  transformer_block.py
raw/: toy_rpo_dataset.jsonl
scripts/: eda.ipynb  eda_deepmath.ipynb  eda_tinystories.ipynb  run_training.py
src/data/: dataloader.py
src/models/: attention.py  bpe_tokenizer.py  embeddings.py  transformer.py  transformer_block.py
src/training/: accuracy_rewards.py  ce_loss.py  grpo_trainer.py  optimizer.py  sft_trainer.py
src/utils/: utils.py
tests/data/: test_dataloader.py  test_dataset.py
tests/inference/: test_decoding.py
tests/models/: test_attention.py  test_bpe_tokenizer.py  test_embeddings.py  test_feeforward.py  test_transformer.py  test_transformer_block.py
tests/training/: test_grpo_trainer.py  test_loss.py  test_optimizer.py
training/: grpo_trainer.py  loss.py  optimizer.py  sft_trainer.py
utils/: utils.py
